# face-rec-lite

./: .env.example  .gitignore  Dockerfile  PRD.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/middleware/: auth.py  rate_limit.py  request_logger.py
app/routers/: __init__.py  faces.py  health.py  users.py  verify.py
app/schemas/: __init__.py  common.py  face.py  user.py
app/services/: database.py  face_ml.py  rate_limiter.py
app/utils/: image.py  metrics.py
migrations/: env.py
migrations/versions/: 0001_create_api_keys.py  0002_create_users.py  0003_create_faces.py
scripts/: create_api_key.py
tests/: conftest.py
tests/e2e/: test_auth_flow.py
tests/fixtures/: api_keys.py
tests/integration/: test_faces_api.py  test_health_api.py  test_users_api.py  test_verify_api.py
tests/unit/: test_face_ml.py  test_image_utils.py  test_rate_limiter.py
ui/: index.html
