[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "face-rec-lite"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "insightface==0.7.3",
    "onnxruntime==1.18.0",
    "opencv-python-headless==4.9.0.80",
    "numpy==1.26.4",
    "Pillow==10.3.0",
    "scipy==1.13.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "pgvector==0.3.2",
    "alembic==1.13.1",
    "redis[asyncio]==5.0.4",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "structlog==24.1.0",
    "prometheus-client==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "factory-boy==3.3.0",
    "ruff==0.4.4",
    "black==24.4.2",
    "mypy==1.10.0",
    "anyio==4.3.0",
    "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80 -v"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
